# powertools-lambda-python

./: .flake8  .gitignore  .gitleaks.toml  .gitleaksignore  .gitpod.Dockerfile  .gitpod.yml  .gitpod_requirements.in  .gitpod_requirements.txt  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  .pylintrc  404.html  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  MANIFEST.in  Makefile  README.md  SECURITY.md  THIRD-PARTY-LICENSES  bandit.baseline  bla.py  build_linux_wheels.sh  cdk.context.json  codecov.yml  latest  mkdocs.yml  mypy.ini  noxfile.py  package-lock.json  package.json  parallel_run_e2e.py  pyproject.toml  pytest.ini  ruff.toml  tox.ini  versions.json
.chglog/: CHANGELOG.tpl.md  config.yml
.clusterfuzzlite/: Dockerfile  build.sh  project.yaml
.devcontainer/: Dockerfile  devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  actionlint.yaml  auto-label.json  auto-label_yml.inactive  auto_assign-issues.yml  boring-cyborg.yml  dependabot.yml  labeler.yml  mergify.yml  release-drafter.yml  semantic.yml  stale.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation-improvements.md  documentation_improvements.yml  feature_request.md  feature_request.yml  maintenance.yml  rfc.md  rfc.yml  share_your_work.yml  static_typing.yml  static_typing_report.md  support_powertools.yml  tech_debt.yml
.github/scripts/: comment_on_large_pr.js  constants.js  create_pr_for_staged_changes.sh  download_pr_artifact.js  enforce_acknowledgment.js  export_pr_details.js  label_missing_acknowledgement_section.js  label_missing_related_issue.js  label_pr_based_on_title.js  label_related_issue.js  post_release.js  save_pr_details.js
.github/workflows/: auto-label.yml  auto-merge.yml  auto_assign_issues.yml  build_changelog.yml  codeql-analysis.yml  delploy_cdk_stack.yml  dependency-review.yml  dispatch_analytics.yml  export_pr_details.yml  label_pr_on_title.yml  layer_govcloud.yml  layer_govcloud_verify.yml  layer_rename.yml  on_closed_issues.yml  on_label_added.yml  on_merged_pr.yml  on_opened_pr.yml  on_pr_fuzzing.yml  on_pr_updates.yml  on_push_docs.yml  on_release_notes.yml  on_schedule_fuzzing.yml  on_schedule_monthly_roadmap_reminder.yml  ossf_scorecard.yml  post_release.js  pre-release.yml  publish.yml  publish_layer.yml  publish_v2_layer.yaml  publish_v2_layer.yml  publish_v3_layer.yml  python.yml  python_build.yml  python_docs.yml  pythonpackage.yml  quality_check.yml  quality_check_pydanticv2.yml  (+24 more)
2.16.3/: Dockerfile  index.html
2.18.0/: 404.html  sitemap.xml
2.19.0/: Dockerfile  index.html
2.20.0/: index.html
2.21.0/: Dockerfile
2.22.0/: 404.html  index.html
2.23.0/: 404.html
2.23.1/: 404.html  Dockerfile  index.html
2.25.1/: index.html
2.27.0/: index.html
2.27.1/: index.html
2.28.0/: Dockerfile  index.html
2.29.0/: index.html
2.30.1/: 404.html
2.30.2/: index.html
2.31.0/: Dockerfile  index.html
2.32.0/: index.html
2.33.0/: Dockerfile  index.html
2.33.1/: 404.html  index.html
2.34.0/: index.html
2.34.1/: 404.html  index.html
2.34.2/: 404.html  index.html
2.35.0/: 404.html  index.html
2.35.1/: 404.html  index.html
2.37.0/: 404.html  index.html
2.39.0/: Dockerfile
2.39.1/: requirements.txt
2.40.0/: index.html
2.40.1/: 404.html  index.html
2.41.0/: Dockerfile
2.42.0/: 404.html  index.html
3.0.0/: 404.html  Dockerfile  index.html
3.1.0/: Dockerfile  index.html
3.2.0/: Dockerfile  index.html  requirements.in
aws_lambda_powertools/: __init__.py  package_logger.py
benchmark/: .gitignore  README.md  benchmark.sh  template.yaml
develop/: 404.html  Dockerfile  index.html  sitemap.xml
docs/: Dockerfile  api.md  automation.md  changelog.md  gatsby-config.js  index.md  maintainers.md  package-lock.json  package.json  quickstart.md  requirements.txt  roadmap.md  security.md  tutorial.md  upgrade.md  versioning.md  we_made_this.md
docs_old/: gatsby-browser.js  gatsby-config.js
example/: .gitignore  README.md  pytest.ini  template.yaml
includes/: abbreviations.md
latest/: 404.html  index.html
layer/: README.md  README.md5  app.py  cdk.json  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
layer/layer/: canary_stack.py  layer_stack.py
layer/layer/canary/: app.py
layer/sar/: template.txt
layer/scripts/: update_layer_arn.sh
layer/scripts/layer-balancer/: README.md  go.mod  go.sum  main.go
layer/test/: layer.test.ts
layer_v3/: README.md  app.py  pyproject.toml
layer_v3/layer/: canary_stack.py  layer_stack.py
layer_v3/layer/canary/: app.py
layer_v3/layer_constructors/: helpers.py  layer_stack.py
layer_v3/layer_constructors/tests/unit/: test_new_cdk_constructor_stack.py
layer_v3/sar/: template.txt
layer_v3/scripts/: update_layer_arn.sh
playground/: app.mjs
python/: .bumpversion.cfg  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  HISTORY.md  Makefile  Pipfile  README.md  bandit.baseline  pyproject.toml  pytest.ini  setup.cfg  setup.py
python/aws_lambda_powertools/: __init__.py
python/aws_lambda_powertools/helper/: models.py  register.py
python/aws_lambda_powertools/logging/: __init__.py  aws_lambda_logging.py  logger.py
python/aws_lambda_powertools/metrics/: __init__.py  base.py  exceptions.py  metric.py  metrics.py
python/aws_lambda_powertools/middleware_factory/: __init__.py  exceptions.py  factory.py
python/aws_lambda_powertools/tracing/: __init__.py  base.py  exceptions.py  extensions.py  tracer.py
python/aws_lambda_powertools/utils/: __init__.py  factory.py  middleware_factory.py
python/example/: README.md  pytest.ini  requirements-dev.txt  samconfig.toml  template.yaml
python/example/hello_world/: app.py  requirements.txt
python/example/tests/: test_handler.py
python/example/tests/unit/: test_handler.py
python/tests/functional/: test_aws_lambda_logging.py  test_init.py  test_logger.py  test_metrics.py  test_middleware_factory.py  test_tracing.py  test_utils.py
python/tests/unit/: test_tracing.py
stage/: 404.html  index.html
(+2923 files in other folders)
