[tool.poetry]
name = "aws-lambda-powertools-python-layer"
version = "1.1.0"
description = "AWS Lambda Powertools for Python Lambda Layers"
authors = ["DevAx <aws-devax-open-source@amazon.com>"]

license = "MIT"
[tool.poetry.dependencies]
python = "^3.9"
cdk-aws-lambda-powertools-layer = "^3.5.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
boto3 = "^1.24.46"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
