[bumpversion]
current_version = 0.3.2
commit = True
tag = False

[metadata]
description-file = README.md
license_files = LICENSE

[bumpversion:file:setup.py]

[bumpversion:file:aws_lambda_powertools/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
universal = 1

[flake8]
exclude = docs, .eggs
ignore = E203, E266, E501, W503
max-line-length = 100
max-complexity = 18

[coverage:run]
source = aws_lambda_powertools
collect_ignore = ['setup.py']

[isort]
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
line_length = 100

[tool:pytest]
addopts = --cov --cov-config=.coveragerc

[options]
python_requires = >=3.6

